lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    ONES
    ZEROS

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions_block -> { instructions }
Rule 5     instructions -> instructions instruction
Rule 6     instructions -> instruction
Rule 7     instruction -> assignment ;
Rule 8     instruction -> if_instruction
Rule 9     instruction -> for_instruction
Rule 10    instruction -> while_instruction
Rule 11    instruction -> print_instruction
Rule 12    instruction -> loop_instruction
Rule 13    instruction -> return_instruction
Rule 14    instruction -> instructions_block
Rule 15    if_instruction -> IF ( relational_expr ) instructions_block
Rule 16    if_instruction -> IF ( relational_expr ) instruction
Rule 17    if_instruction -> IF ( relational_expr ) instructions_block ELSE instruction
Rule 18    if_instruction -> IF ( relational_expr ) instruction ELSE instruction
Rule 19    for_instruction -> FOR ID = INTNUM : ID instructions_block
Rule 20    for_instruction -> FOR ID = INTNUM : ID instruction
Rule 21    for_instruction -> FOR ID = ID : ID instructions_block
Rule 22    for_instruction -> FOR ID = ID : ID instruction
Rule 23    while_instruction -> WHILE ( relational_expr ) instructions_block
Rule 24    while_instruction -> WHILE ( relational_expr ) instruction
Rule 25    loop_instruction -> BREAK ;
Rule 26    loop_instruction -> CONTINUE ;
Rule 27    return_instruction -> RETURN expr ;
Rule 28    print_instruction -> PRINT print_list ;
Rule 29    print_list -> print_list , expr
Rule 30    print_list -> print_list , STRING
Rule 31    print_list -> expr
Rule 32    print_list -> STRING
Rule 33    assignment -> ID = token
Rule 34    assignment -> MID = elem
Rule 35    assignment -> ID ADDASSIGN token
Rule 36    assignment -> ID SUBASSIGN token
Rule 37    assignment -> ID MULASSIGN token
Rule 38    assignment -> ID DIVASSIGN token
Rule 39    token -> ID
Rule 40    token -> INTNUM
Rule 41    token -> FLONUM
Rule 42    token -> matrix
Rule 43    token -> expr
Rule 44    token -> matrix_expr
Rule 45    token -> unary_expr
Rule 46    expr -> expr + term
Rule 47    expr -> expr - term
Rule 48    expr -> term
Rule 49    term -> term * factor
Rule 50    term -> term / factor
Rule 51    term -> factor
Rule 52    factor -> ( expr )
Rule 53    factor -> elem
Rule 54    relational_expr -> expr GREATEREQUAL expr
Rule 55    relational_expr -> expr EQUALS expr
Rule 56    relational_expr -> expr NOTEQUALS expr
Rule 57    relational_expr -> expr LOWEREQUAL expr
Rule 58    relational_expr -> expr < expr
Rule 59    relational_expr -> expr > expr
Rule 60    MID -> ID [ INTNUM , INTNUM ]
Rule 61    matrix -> EYE ( INTNUM )
Rule 62    outerlist -> [ innerlist ]
Rule 63    innerlist -> elem
Rule 64    elem -> ID
Rule 65    elem -> INTNUM
Rule 66    elem -> FLONUM
Rule 67    matrix_expr -> matrix_expr DOTADD matrix_term
Rule 68    matrix_expr -> matrix_expr DOTSUB matrix_term
Rule 69    matrix_expr -> matrix_term
Rule 70    matrix_term -> matrix_term DOTMUL matrix_factor
Rule 71    matrix_term -> matrix_term DOTDIV matrix_factor
Rule 72    matrix_term -> matrix_factor
Rule 73    matrix_factor -> ( matrix_expr )
Rule 74    matrix_factor -> matrix
Rule 75    matrix_factor -> ID
Rule 76    unary_expr -> - ID
Rule 77    unary_expr -> ID '

Terminals, with rules where they appear

'                    : 77
(                    : 15 16 17 18 23 24 52 61 73
)                    : 15 16 17 18 23 24 52 61 73
*                    : 49
+                    : 46
,                    : 29 30 60
-                    : 47 76
/                    : 50
:                    : 19 20 21 22
;                    : 7 25 26 27 28
<                    : 58
=                    : 19 20 21 22 33 34
>                    : 59
ADDASSIGN            : 35
BREAK                : 25
COMMENT              : 
CONTINUE             : 26
DIVASSIGN            : 38
DOTADD               : 67
DOTDIV               : 71
DOTMUL               : 70
DOTSUB               : 68
ELSE                 : 17 18
EQUALS               : 55
EYE                  : 61
FLONUM               : 41 66
FOR                  : 19 20 21 22
GREATEREQUAL         : 54
ID                   : 19 19 20 20 21 21 21 22 22 22 33 35 36 37 38 39 60 64 75 76 77
IF                   : 15 16 17 18
INTNUM               : 19 20 40 60 60 61 65
LOWEREQUAL           : 57
MULASSIGN            : 37
NOTEQUALS            : 56
ONES                 : 
PRINT                : 28
RETURN               : 27
STRING               : 30 32
SUBASSIGN            : 36
WHILE                : 23 24
ZEROS                : 
[                    : 60 62
]                    : 60 62
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

MID                  : 34
assignment           : 7
elem                 : 34 53 63
expr                 : 27 29 31 43 46 47 52 54 54 55 55 56 56 57 57 58 58 59 59
factor               : 49 50 51
for_instruction      : 9
if_instruction       : 8
innerlist            : 62
instruction          : 5 6 16 17 18 18 20 22 24
instructions         : 2 4 5
instructions_block   : 14 15 17 19 21 23
instructions_opt     : 1
loop_instruction     : 12
matrix               : 42 74
matrix_expr          : 44 67 68 73
matrix_factor        : 70 71 72
matrix_term          : 67 68 69 70 71
outerlist            : 
print_instruction    : 11
print_list           : 28 29 30
program              : 0
relational_expr      : 15 16 17 18 23 24
return_instruction   : 13
term                 : 46 47 48 49 50
token                : 33 35 36 37 38
unary_expr           : 45
while_instruction    : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . assignment ;
    (8) instruction -> . if_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . while_instruction
    (11) instruction -> . print_instruction
    (12) instruction -> . loop_instruction
    (13) instruction -> . return_instruction
    (14) instruction -> . instructions_block
    (33) assignment -> . ID = token
    (34) assignment -> . MID = elem
    (35) assignment -> . ID ADDASSIGN token
    (36) assignment -> . ID SUBASSIGN token
    (37) assignment -> . ID MULASSIGN token
    (38) assignment -> . ID DIVASSIGN token
    (15) if_instruction -> . IF ( relational_expr ) instructions_block
    (16) if_instruction -> . IF ( relational_expr ) instruction
    (17) if_instruction -> . IF ( relational_expr ) instructions_block ELSE instruction
    (18) if_instruction -> . IF ( relational_expr ) instruction ELSE instruction
    (19) for_instruction -> . FOR ID = INTNUM : ID instructions_block
    (20) for_instruction -> . FOR ID = INTNUM : ID instruction
    (21) for_instruction -> . FOR ID = ID : ID instructions_block
    (22) for_instruction -> . FOR ID = ID : ID instruction
    (23) while_instruction -> . WHILE ( relational_expr ) instructions_block
    (24) while_instruction -> . WHILE ( relational_expr ) instruction
    (28) print_instruction -> . PRINT print_list ;
    (25) loop_instruction -> . BREAK ;
    (26) loop_instruction -> . CONTINUE ;
    (27) return_instruction -> . RETURN expr ;
    (4) instructions_block -> . { instructions }
    (60) MID -> . ID [ INTNUM , INTNUM ]

    $end            reduce using rule 3 (instructions_opt -> .)
    ID              shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_instruction                 shift and go to state 6
    for_instruction                shift and go to state 7
    while_instruction              shift and go to state 8
    print_instruction              shift and go to state 9
    loop_instruction               shift and go to state 10
    return_instruction             shift and go to state 11
    instructions_block             shift and go to state 12
    MID                            shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (7) instruction -> . assignment ;
    (8) instruction -> . if_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . while_instruction
    (11) instruction -> . print_instruction
    (12) instruction -> . loop_instruction
    (13) instruction -> . return_instruction
    (14) instruction -> . instructions_block
    (33) assignment -> . ID = token
    (34) assignment -> . MID = elem
    (35) assignment -> . ID ADDASSIGN token
    (36) assignment -> . ID SUBASSIGN token
    (37) assignment -> . ID MULASSIGN token
    (38) assignment -> . ID DIVASSIGN token
    (15) if_instruction -> . IF ( relational_expr ) instructions_block
    (16) if_instruction -> . IF ( relational_expr ) instruction
    (17) if_instruction -> . IF ( relational_expr ) instructions_block ELSE instruction
    (18) if_instruction -> . IF ( relational_expr ) instruction ELSE instruction
    (19) for_instruction -> . FOR ID = INTNUM : ID instructions_block
    (20) for_instruction -> . FOR ID = INTNUM : ID instruction
    (21) for_instruction -> . FOR ID = ID : ID instructions_block
    (22) for_instruction -> . FOR ID = ID : ID instruction
    (23) while_instruction -> . WHILE ( relational_expr ) instructions_block
    (24) while_instruction -> . WHILE ( relational_expr ) instruction
    (28) print_instruction -> . PRINT print_list ;
    (25) loop_instruction -> . BREAK ;
    (26) loop_instruction -> . CONTINUE ;
    (27) return_instruction -> . RETURN expr ;
    (4) instructions_block -> . { instructions }
    (60) MID -> . ID [ INTNUM , INTNUM ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    ID              shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22

    instruction                    shift and go to state 23
    assignment                     shift and go to state 5
    if_instruction                 shift and go to state 6
    for_instruction                shift and go to state 7
    while_instruction              shift and go to state 8
    print_instruction              shift and go to state 9
    loop_instruction               shift and go to state 10
    return_instruction             shift and go to state 11
    instructions_block             shift and go to state 12
    MID                            shift and go to state 14

state 4

    (6) instructions -> instruction .

    ID              reduce using rule 6 (instructions -> instruction .)
    IF              reduce using rule 6 (instructions -> instruction .)
    FOR             reduce using rule 6 (instructions -> instruction .)
    WHILE           reduce using rule 6 (instructions -> instruction .)
    PRINT           reduce using rule 6 (instructions -> instruction .)
    BREAK           reduce using rule 6 (instructions -> instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instruction .)
    RETURN          reduce using rule 6 (instructions -> instruction .)
    {               reduce using rule 6 (instructions -> instruction .)
    $end            reduce using rule 6 (instructions -> instruction .)
    }               reduce using rule 6 (instructions -> instruction .)


state 5

    (7) instruction -> assignment . ;

    ;               shift and go to state 24


state 6

    (8) instruction -> if_instruction .

    ID              reduce using rule 8 (instruction -> if_instruction .)
    IF              reduce using rule 8 (instruction -> if_instruction .)
    FOR             reduce using rule 8 (instruction -> if_instruction .)
    WHILE           reduce using rule 8 (instruction -> if_instruction .)
    PRINT           reduce using rule 8 (instruction -> if_instruction .)
    BREAK           reduce using rule 8 (instruction -> if_instruction .)
    CONTINUE        reduce using rule 8 (instruction -> if_instruction .)
    RETURN          reduce using rule 8 (instruction -> if_instruction .)
    {               reduce using rule 8 (instruction -> if_instruction .)
    $end            reduce using rule 8 (instruction -> if_instruction .)
    }               reduce using rule 8 (instruction -> if_instruction .)
    ELSE            reduce using rule 8 (instruction -> if_instruction .)


state 7

    (9) instruction -> for_instruction .

    ID              reduce using rule 9 (instruction -> for_instruction .)
    IF              reduce using rule 9 (instruction -> for_instruction .)
    FOR             reduce using rule 9 (instruction -> for_instruction .)
    WHILE           reduce using rule 9 (instruction -> for_instruction .)
    PRINT           reduce using rule 9 (instruction -> for_instruction .)
    BREAK           reduce using rule 9 (instruction -> for_instruction .)
    CONTINUE        reduce using rule 9 (instruction -> for_instruction .)
    RETURN          reduce using rule 9 (instruction -> for_instruction .)
    {               reduce using rule 9 (instruction -> for_instruction .)
    $end            reduce using rule 9 (instruction -> for_instruction .)
    }               reduce using rule 9 (instruction -> for_instruction .)
    ELSE            reduce using rule 9 (instruction -> for_instruction .)


state 8

    (10) instruction -> while_instruction .

    ID              reduce using rule 10 (instruction -> while_instruction .)
    IF              reduce using rule 10 (instruction -> while_instruction .)
    FOR             reduce using rule 10 (instruction -> while_instruction .)
    WHILE           reduce using rule 10 (instruction -> while_instruction .)
    PRINT           reduce using rule 10 (instruction -> while_instruction .)
    BREAK           reduce using rule 10 (instruction -> while_instruction .)
    CONTINUE        reduce using rule 10 (instruction -> while_instruction .)
    RETURN          reduce using rule 10 (instruction -> while_instruction .)
    {               reduce using rule 10 (instruction -> while_instruction .)
    $end            reduce using rule 10 (instruction -> while_instruction .)
    }               reduce using rule 10 (instruction -> while_instruction .)
    ELSE            reduce using rule 10 (instruction -> while_instruction .)


state 9

    (11) instruction -> print_instruction .

    ID              reduce using rule 11 (instruction -> print_instruction .)
    IF              reduce using rule 11 (instruction -> print_instruction .)
    FOR             reduce using rule 11 (instruction -> print_instruction .)
    WHILE           reduce using rule 11 (instruction -> print_instruction .)
    PRINT           reduce using rule 11 (instruction -> print_instruction .)
    BREAK           reduce using rule 11 (instruction -> print_instruction .)
    CONTINUE        reduce using rule 11 (instruction -> print_instruction .)
    RETURN          reduce using rule 11 (instruction -> print_instruction .)
    {               reduce using rule 11 (instruction -> print_instruction .)
    $end            reduce using rule 11 (instruction -> print_instruction .)
    }               reduce using rule 11 (instruction -> print_instruction .)
    ELSE            reduce using rule 11 (instruction -> print_instruction .)


state 10

    (12) instruction -> loop_instruction .

    ID              reduce using rule 12 (instruction -> loop_instruction .)
    IF              reduce using rule 12 (instruction -> loop_instruction .)
    FOR             reduce using rule 12 (instruction -> loop_instruction .)
    WHILE           reduce using rule 12 (instruction -> loop_instruction .)
    PRINT           reduce using rule 12 (instruction -> loop_instruction .)
    BREAK           reduce using rule 12 (instruction -> loop_instruction .)
    CONTINUE        reduce using rule 12 (instruction -> loop_instruction .)
    RETURN          reduce using rule 12 (instruction -> loop_instruction .)
    {               reduce using rule 12 (instruction -> loop_instruction .)
    $end            reduce using rule 12 (instruction -> loop_instruction .)
    }               reduce using rule 12 (instruction -> loop_instruction .)
    ELSE            reduce using rule 12 (instruction -> loop_instruction .)


state 11

    (13) instruction -> return_instruction .

    ID              reduce using rule 13 (instruction -> return_instruction .)
    IF              reduce using rule 13 (instruction -> return_instruction .)
    FOR             reduce using rule 13 (instruction -> return_instruction .)
    WHILE           reduce using rule 13 (instruction -> return_instruction .)
    PRINT           reduce using rule 13 (instruction -> return_instruction .)
    BREAK           reduce using rule 13 (instruction -> return_instruction .)
    CONTINUE        reduce using rule 13 (instruction -> return_instruction .)
    RETURN          reduce using rule 13 (instruction -> return_instruction .)
    {               reduce using rule 13 (instruction -> return_instruction .)
    $end            reduce using rule 13 (instruction -> return_instruction .)
    }               reduce using rule 13 (instruction -> return_instruction .)
    ELSE            reduce using rule 13 (instruction -> return_instruction .)


state 12

    (14) instruction -> instructions_block .

    ID              reduce using rule 14 (instruction -> instructions_block .)
    IF              reduce using rule 14 (instruction -> instructions_block .)
    FOR             reduce using rule 14 (instruction -> instructions_block .)
    WHILE           reduce using rule 14 (instruction -> instructions_block .)
    PRINT           reduce using rule 14 (instruction -> instructions_block .)
    BREAK           reduce using rule 14 (instruction -> instructions_block .)
    CONTINUE        reduce using rule 14 (instruction -> instructions_block .)
    RETURN          reduce using rule 14 (instruction -> instructions_block .)
    {               reduce using rule 14 (instruction -> instructions_block .)
    $end            reduce using rule 14 (instruction -> instructions_block .)
    }               reduce using rule 14 (instruction -> instructions_block .)
    ELSE            reduce using rule 14 (instruction -> instructions_block .)


state 13

    (33) assignment -> ID . = token
    (35) assignment -> ID . ADDASSIGN token
    (36) assignment -> ID . SUBASSIGN token
    (37) assignment -> ID . MULASSIGN token
    (38) assignment -> ID . DIVASSIGN token
    (60) MID -> ID . [ INTNUM , INTNUM ]

    =               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    [               shift and go to state 30


state 14

    (34) assignment -> MID . = elem

    =               shift and go to state 31


state 15

    (15) if_instruction -> IF . ( relational_expr ) instructions_block
    (16) if_instruction -> IF . ( relational_expr ) instruction
    (17) if_instruction -> IF . ( relational_expr ) instructions_block ELSE instruction
    (18) if_instruction -> IF . ( relational_expr ) instruction ELSE instruction

    (               shift and go to state 32


state 16

    (19) for_instruction -> FOR . ID = INTNUM : ID instructions_block
    (20) for_instruction -> FOR . ID = INTNUM : ID instruction
    (21) for_instruction -> FOR . ID = ID : ID instructions_block
    (22) for_instruction -> FOR . ID = ID : ID instruction

    ID              shift and go to state 33


state 17

    (23) while_instruction -> WHILE . ( relational_expr ) instructions_block
    (24) while_instruction -> WHILE . ( relational_expr ) instruction

    (               shift and go to state 34


state 18

    (28) print_instruction -> PRINT . print_list ;
    (29) print_list -> . print_list , expr
    (30) print_list -> . print_list , STRING
    (31) print_list -> . expr
    (32) print_list -> . STRING
    (46) expr -> . expr + term
    (47) expr -> . expr - term
    (48) expr -> . term
    (49) term -> . term * factor
    (50) term -> . term / factor
    (51) term -> . factor
    (52) factor -> . ( expr )
    (53) factor -> . elem
    (64) elem -> . ID
    (65) elem -> . INTNUM
    (66) elem -> . FLONUM

    STRING          shift and go to state 37
    (               shift and go to state 40
    ID              shift and go to state 42
    INTNUM          shift and go to state 43
    FLONUM          shift and go to state 44

    print_list                     shift and go to state 35
    expr                           shift and go to state 36
    term                           shift and go to state 38
    factor                         shift and go to state 39
    elem                           shift and go to state 41

state 19

    (25) loop_instruction -> BREAK . ;

    ;               shift and go to state 45


state 20

    (26) loop_instruction -> CONTINUE . ;

    ;               shift and go to state 46


state 21

    (27) return_instruction -> RETURN . expr ;
    (46) expr -> . expr + term
    (47) expr -> . expr - term
    (48) expr -> . term
    (49) term -> . term * factor
    (50) term -> . term / factor
    (51) term -> . factor
    (52) factor -> . ( expr )
    (53) factor -> . elem
    (64) elem -> . ID
    (65) elem -> . INTNUM
    (66) elem -> . FLONUM

    (               shift and go to state 40
    ID              shift and go to state 42
    INTNUM          shift and go to state 43
    FLONUM          shift and go to state 44

    expr                           shift and go to state 47
    term                           shift and go to state 38
    factor                         shift and go to state 39
    elem                           shift and go to state 41

state 22

    (4) instructions_block -> { . instructions }
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . assignment ;
    (8) instruction -> . if_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . while_instruction
    (11) instruction -> . print_instruction
    (12) instruction -> . loop_instruction
    (13) instruction -> . return_instruction
    (14) instruction -> . instructions_block
    (33) assignment -> . ID = token
    (34) assignment -> . MID = elem
    (35) assignment -> . ID ADDASSIGN token
    (36) assignment -> . ID SUBASSIGN token
    (37) assignment -> . ID MULASSIGN token
    (38) assignment -> . ID DIVASSIGN token
    (15) if_instruction -> . IF ( relational_expr ) instructions_block
    (16) if_instruction -> . IF ( relational_expr ) instruction
    (17) if_instruction -> . IF ( relational_expr ) instructions_block ELSE instruction
    (18) if_instruction -> . IF ( relational_expr ) instruction ELSE instruction
    (19) for_instruction -> . FOR ID = INTNUM : ID instructions_block
    (20) for_instruction -> . FOR ID = INTNUM : ID instruction
    (21) for_instruction -> . FOR ID = ID : ID instructions_block
    (22) for_instruction -> . FOR ID = ID : ID instruction
    (23) while_instruction -> . WHILE ( relational_expr ) instructions_block
    (24) while_instruction -> . WHILE ( relational_expr ) instruction
    (28) print_instruction -> . PRINT print_list ;
    (25) loop_instruction -> . BREAK ;
    (26) loop_instruction -> . CONTINUE ;
    (27) return_instruction -> . RETURN expr ;
    (4) instructions_block -> . { instructions }
    (60) MID -> . ID [ INTNUM , INTNUM ]

    ID              shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22

    instructions                   shift and go to state 48
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_instruction                 shift and go to state 6
    for_instruction                shift and go to state 7
    while_instruction              shift and go to state 8
    print_instruction              shift and go to state 9
    loop_instruction               shift and go to state 10
    return_instruction             shift and go to state 11
    instructions_block             shift and go to state 12
    MID                            shift and go to state 14

state 23

    (5) instructions -> instructions instruction .

    ID              reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 24

    (7) instruction -> assignment ; .

    ID              reduce using rule 7 (instruction -> assignment ; .)
    IF              reduce using rule 7 (instruction -> assignment ; .)
    FOR             reduce using rule 7 (instruction -> assignment ; .)
    WHILE           reduce using rule 7 (instruction -> assignment ; .)
    PRINT           reduce using rule 7 (instruction -> assignment ; .)
    BREAK           reduce using rule 7 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 7 (instruction -> assignment ; .)
    RETURN          reduce using rule 7 (instruction -> assignment ; .)
    {               reduce using rule 7 (instruction -> assignment ; .)
    $end            reduce using rule 7 (instruction -> assignment ; .)
    }               reduce using rule 7 (instruction -> assignment ; .)
    ELSE            reduce using rule 7 (instruction -> assignment ; .)


state 25
